Java 24 support